crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_dimensions__remove_dimensions-3.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_dimensions.rs
expression: "test_config(r#\"{ \"removeDimensions\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"50\" viewBox=\"0 0 100 50\">\n    test\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 50">
    test
</svg>
