crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_dimensions__remove_dimensions-6.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_dimensions.rs
expression: "test_config(r#\"{ \"removeDimensions\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"100px\" height=\"50px\">\n    test\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="100px" height="50px">
    test
</svg>
